# linkedin-jobs-scraper

./: .gitignore  .pypirc  CHANGLOG.md  Jobs.xlsx  LICENSE  MANIFEST.in  README.md  cookies.json  linkedin_jobs.csv  main.py  project-architech.md  pyproject.toml  requirements.txt  setup.py
auth/: authenticator.py  init.py
config/: config.yaml
linkedin_jobs_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
linkedin_jobs_scraper_cbx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
linkedin_scraper/: __init__.py  cli.py
linkedin_scraper/auth/: authenticator.py
linkedin_scraper/scraper/: __init__.py  job_scraper.py
linkedin_scraper/storage/: __init__.py  csv_manager.py
linkedin_scraper/utils/: helpers.py
scraper/: job_scraper.py
utils/: init.py
